--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,16 @@
 	</parent>
 	<groupId>nz.co.doctorS</groupId>
 	<artifactId>DoctorS</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>war</packaging>
 	<name>DoctorS</name>
 	<description>The server of Doctor</description>
+
 	<properties>
 		<java.version>11</java.version>
+		<docker.image.prefix>doctors</docker.image.prefix>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -51,6 +54,30 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>dockerfile-maven-plugin</artifactId>
+				<version>1.4.13</version>
+				<executions>
+					<execution>
+						<id>default</id>
+						<goals>
+							<goal>build</goal>
+							<!-- <goal>push</goal> -->
+						</goals>
+					</execution>
+				</executions>
+
+				<configuration>
+					<repository>michaelggmanz/doctors</repository>
+					<tag>${project.version}</tag>
+					<!-- <buildArgs>
+					<JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
+					</buildArgs> -->
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
