--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.5.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>nz.co.doctorS</groupId>
-	<artifactId>DoctorS</artifactId>
+	<groupId>nz.co.doctors</groupId>
+	<artifactId>doctors</artifactId>
 	<version>0.0.1</version>
 	<packaging>jar</packaging>
-	<name>DoctorS</name>
+	<name>doctors</name>
 	<description>The server of Doctor</description>
 
 	<properties>
